Solved the overlapping in the mobile view

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -7,6 +7,7 @@
   --primary-input-border: #e1e4e8;
   --primary-input-background: #fff;
   --primary-contact-background:#dee3de;
+  --primary-search-dropdown:#f0eee4;
 }
 [data-theme="dark"] {
   --primary-background: #010409;
@@ -17,6 +18,7 @@
   --primary-input-border: #21262d;
   --primary-input-background: #0d1117;
   --primary-contact-background:#1a2228;
+  --primary-search-dropdown: #282C35;
 }
 
 /* custom scroll bar */
@@ -46,6 +48,7 @@ body {
    width: 100%;
   overflow-x: hidden;
   z-index:-10;
+  transition:2s;
   background-color: var(--primary-background);
 }
 
@@ -70,9 +73,11 @@ html {
   align-items: center;
 }
 
-#aboutUs div{
+
+#aboutUs #box{
   width: 70%;
   height: 50%;
+  
 }
 
 #mainHeading{
@@ -196,6 +201,51 @@ label {
   margin-bottom: 0;
 }
 
+.search-input{
+  margin-top: 24px!important;
+background: var(--primary-contact-background);
+border-radius: 5px;
+position: relative;
+
+}
+
+.search-input.active input{
+  border-radius: 5px 5px 0 0;
+}
+
+.search-input .autocom-box{
+  padding: 0;
+  opacity: 0;
+  pointer-events: none;
+  max-height: 280px;
+  overflow-y: auto;
+}
+
+.search-input.active .autocom-box{
+  padding: 10px 8px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.autocom-box li{
+  list-style: none;
+  padding: 8px 12px;
+  display: none;
+  width: 100%;
+  cursor: default;
+  border-radius: 3px;
+  color:var(--primary-title);
+  background:var(--primary-input-background);
+  border-bottom: 1px solid var(--primary-input-border);
+}
+
+.search-input.active .autocom-box li{
+  text-transform: uppercase;
+  display: block;
+}
+.autocom-box li:hover{
+  background: var(--primary-search-dropdown);
+}
 
 .form-control{
     border:1.5px solid var(--primary-input-border);
@@ -387,6 +437,10 @@ footer {
   margin:30px 10px;
 }
 
+.social-icon {
+  display: inline-block;
+  width:10px;
+}
 .contact-inputs{
   margin-left: 5px;
   margin-bottom: 12px;
@@ -545,5 +599,115 @@ footer {
 @media screen and (max-width: 320px) {
   footer {
     font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #mainHeading {
+    font-size: 2rem;
+  }
+  #paraGraph {
+    font-size: 1.3rem;
+  }
+}
+
+
+/* Preloader Css */
+
+.forloader{
+  position: fixed;
+  z-index: 99999;
+  top:0;
+  left:0;
+  /* background: #000; */
+  width:100vw;
+  height: 100vh;
+  transition: 2s;
+}
+.forloader::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width:50vw;
+  background: #000; 
+  transition: 2s;
+}
+.forloader:after{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background: #000; 
+  width:50vw;
+  transition: 2s;
+}
+.forloader.complete:before{
+  left:-50%;
+}
+.forloader.complete:after{
+  right:-50%;
+}
+.forloader.complete{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+#loader2{
+  position: absolute;
+  top:50vh;
+  left:50vw;
+  border: 4px solid #fff;
+  width:50px;
+  height: 50px;
+  animation: cube 2s linear infinite;
+  z-index: 100000;
+}
+#loader2::before{
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  animation:cubebg 2s linear infinite;
+}
+@keyframes cube{
+  0%
+  {
+    transform: rotate(0deg);
+  }
+  25%{
+    transform: rotate(180deg);
+  }
+  50%{
+    transform: rotate(180deg);
+  }
+  75%{
+    transform: rotate(360deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
+@keyframes cubebg{
+  0%
+  {
+    height: 0;
+  }
+  25%{
+    height: 0;
+  }
+  50%{
+    height: 100%;
+  }
+  75%{
+    height: 100%;
+  }
+  100%{
+    height: 0;
   }
 }
